--- a/fitness/index.html
+++ b/fitness/index.html
@@ -7,9 +7,11 @@
   </head>
   <body>
 
+    <div id="container">
+
 <!-- Use the header area for the website name or logo -->
     <header>
-      <a href="index.html"><img src="/images/hinhanh.jpg" alt="Forward Fitness Club logo" height="275" width="845"></a>
+      <a href="index.html"><img src="images/hinhanh.jpg" alt="Forward Fitness Club logo" height="650" width="1400"></a>
     </header>
 
   <!-- Use the nav area to add hyperlinks to other pages within the website -->
@@ -35,6 +37,8 @@
     <footer>
       &copy; Copyright 2015. All Rights Reserved.<br> <a href ="mailto:forwardfitness@club.net">forwardfitness@club.net</a>
       </footer>
+
+    </div>
 
   </body>
 </html>
