--- a/fitness/contact.html
+++ b/fitness/contact.html
@@ -11,7 +11,7 @@
 
 <!-- Use the header area for the website name or logo -->
     <header>
-      <a href="index.html"><img src="images/ffc_logo.jpg" alt="Forward Fitness Club logo" height="275" width="845"></a>
+      <a href="index.html"><img src="images/ffc_logo.png" alt="Forward Fitness Club logo" height="275" width="845"></a>
     </header>
 
   <!-- Use the nav area to add hyperlinks to other pages within the website -->
@@ -25,6 +25,19 @@
 
 <!--Use the main area to add the main content of the webpage -->
     <main>
+
+      <h2>Ready to get started? Contact us today.
+  <p>We are located at:<br>
+    25743 Bloom Court<br>
+    Locket, GA 85524</p>
+
+    <p>Phone Number<br>
+      <a class="mobbile" href="tel:8145559608">(814)555-9608</a>(814) 555-9608</p>
+
+      <p>Email Address<br>
+        <a href="mailto:forwardfitness@club.net">forwardfitness@club.net</a><br>
+        <br><br>
+        
     </main>
 
 <!-- Use the footer area to add webpage footer content -->
