finish chapter 4 and first page chapter 5

--- a/fitness/contact.html
+++ b/fitness/contact.html
@@ -2,6 +2,7 @@
 <!-- This website template was created by: Long Pham -->
 <html lang="en" dir="ltr">
   <head>
+    <link rel="stylesheet" href="css/styles.css">
     <meta charset="utf-8">
     <title>Forward Fitness Club</title>
   </head>
@@ -11,16 +12,18 @@
 
 <!-- Use the header area for the website name or logo -->
     <header>
-      <a href="index.html"><img src="images/ffc_logo.png" alt="Forward Fitness Club logo" height="275" width="845"></a>
+          <img src="images/ffc_logo.png" alt="Forward Fitness Club logo"
     </header>
 
   <!-- Use the nav area to add hyperlinks to other pages within the website -->
     <nav>
-      <a href="index.html">Home</a> &nbsp; &nbsp;
-      <a href="about.html">About Us</a> &nbsp; &nbsp;
-      <a href="classes.html">Classes</a> &nbsp; &nbsp;
-      <a href="nutrition.html">Nutrition</a> &nbsp; &nbsp;
-      <a href="Contact.html">Contact Us</a>
+      <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About Us</a></li>
+      <li><a href="classes.html">Classes</a></li>
+      <li><a href="nutrition.html">Nutrition</a></li>
+      <li><a href="Contact.html">Contact Us</a></li>
+    </ul>
     </nav>
 
 <!--Use the main area to add the main content of the webpage -->
@@ -37,7 +40,7 @@
       <p>Email Address<br>
         <a href="mailto:forwardfitness@club.net">forwardfitness@club.net</a><br>
         <br><br>
-        
+
     </main>
 
 <!-- Use the footer area to add webpage footer content -->
