--- a/fitness/about.html
+++ b/fitness/about.html
@@ -2,6 +2,7 @@
 <!-- This website template was created by: Long Pham -->
 <html lang="en" dir="ltr">
   <head>
+    <link rel="stylesheet" href="css/styles.css">
     <meta charset="utf-8">
     <title>Forward Fitness Club</title>
   </head>
@@ -11,16 +12,18 @@
 
 <!-- Use the header area for the website name or logo -->
     <header>
-      <a href="index.html"><img src="images/ffc_logo.png" alt="Forward Fitness Club logo" height="275" width="845"></a>
+          <img src="images/ffc_logo.png" alt="Forward Fitness Club logo"
     </header>
 
   <!-- Use the nav area to add hyperlinks to other pages within the website -->
     <nav>
-      <a href="index.html">Home</a> &nbsp; &nbsp;
-      <a href="about.html">About Us</a> &nbsp; &nbsp;
-      <a href="classes.html">Classes</a> &nbsp; &nbsp;
-      <a href="nutrition.html">Nutrition</a> &nbsp; &nbsp;
-      <a href="Contact.html">Contact Us</a>
+      <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About Us</a></li>
+      <li><a href="classes.html">Classes</a></li>
+      <li><a href="nutrition.html">Nutrition</a></li>
+      <li><a href="Contact.html">Contact Us</a></li>
+    </ul>
     </nav>
 
 <!--Use the main area to add the main content of the webpage -->
@@ -34,7 +37,6 @@
             <li>Kettle bells</li>
             <li>Barbells</li>
       </ul><br>
-    </main>
  <h1>Cardio</h1>
  <img class="equip" src="images/equipment2.jpg" alt="Cardio Equipment" height="195" width="260">
  <p>Burn fat through cardio workouts. If you need to lose 20 lbs or more, include at least 30 minutes of cardio each day.
@@ -58,6 +60,31 @@
      <li>Personalized Program</li>
      <li>Consistent Support and Motivation</li>
      </ul><br>
+     <h1>Common Exercises</h1>
+  <p>The following are common exercises that we encourage our clients to do as part of their daily exercise routine.</p>
+  <dl>
+    <dt>Burpee</dt>
+    <dd>Burpees are a great, full body exercise to increase your strength and endurance. Begin in a standing position, drop into a squat
+and extend your hands forward, kick your feet back and then forward again quickly, and then jump up from a squatted position.
+<br></dd>
+
+<dt>Plank</dt>
+<dd>Planks build your core strength. To perform a plank, get in a push up position and rest your forearms on the oor.
+
+Hold the position as long as you can.
+<br></dd>
+
+<dt>Mountain Climber</dt>
+<dd>Mountain climbers are a good cardio exercise. Place your hands on the oor in a push up position, then bring one
+
+knee up to your chest and then switch as quickly as you can (as though you are climbing a mountain).
+<br></dd>
+</dl>
+
+<p>For more information about how to stay active, visit <a href=”http://www.tness.gov/be-active/ways-to-be
+
+-active/”>tness.gov</a>.</p>
+</main>
 <!-- Use the footer area to add webpage footer content -->
     <footer>
       &copy; Copyright 2015. All Rights Reserved.<br> <a href ="mailto:forwardfitness@club.net">forwardfitness@club.net</a>
