--- a/fitness/index.html
+++ b/fitness/index.html
@@ -31,10 +31,26 @@
 
       <p>Welcome to Forward Fitness Club, Our mission is to clients meet their fitness and nutrition goal. </p>
 
-      <p>If you have truggled with getting healthy and need the motivation and resources to make a healthy lifestyle change, contact us today. Our facility includes state-of-the-act equipment, convenient group training classes, and nutrition tips and information to keep you healthy.</p>
+      <div class="mobile">
 
-      <p>We provide a FREE one-week membership so you can experience the benefits of your equipment and facility. This one-week trial gives you complete access to your equipment, training classes, and nutrition plainning. Contact us today to start your free trial!</p>
-    </main>
+        <h3>FREE One-Week Trial Membership!</h3>
+        <p><a href="tel:8145559608">Call Us Today to Get Started</a></p>
+
+        <h4>Fitness Club Hours:</h4>
+        <p>Monday - Thursday: 6:00am - 6:00pm<br>
+        Friday: 6:00am - 4:00<br>
+        Saturday: 8:00am - 6:00pm<br>
+        Sunday: Closed</p>
+
+      <div class="desktop">
+        <p>If you have truggled with getting healthy and need the motivation and resources to make a healthy lifestyle change, contact us today. Our facility includes state-of-the-act equipment, convenient group training classes, and nutrition tips and information to keep you healthy.</p>
+
+        <p>We provide a FREE one-week membership so you can experience the benefits of your equipment and facility. This one-week trial gives you complete access to your equipment, training classes, and nutrition plainning. Contact us today to start your free trial!</p>
+      </div>
+      </main>
+
+
+
 
 <!-- Use the footer area to add webpage footer content -->
     <footer>
