--- a/fitness/about.html
+++ b/fitness/about.html
@@ -32,7 +32,7 @@
       <h1>Weights</h1>
       <img class="equip"src="images/equipment1.jpg"alt="Weight equipment">
       <p>Our facility includes a weight training area with several weight options. Build lean muscle with weights and improve your core with weight training.</p>
-      <ul>
+      <ul class="items">
             <li>Dumblebells</li>
             <li>Kettle bells</li>
             <li>Barbells</li>
@@ -43,7 +43,7 @@
 
     We have several equipment choices for your workout.</p>
 
-    <ul>
+    <ul clas=-"items">
      <li>Treadmills</li>
      <li>Elliptical Machines</li>
      <li>Exercise Bikes</li>
@@ -55,7 +55,7 @@
     keep you motivated and push you farther than you would push yourself. When you feel like you cannot do one more
     rep, they tell you that you can. Personal training has many benets.</p>
 
-     <ul>
+           <ul class="items">
      <li>Accountability</li>
      <li>Personalized Program</li>
      <li>Consistent Support and Motivation</li>
